# DEAN

./: .actrc  .gitignore  .mcp.json  .pre-commit-config.yaml  BUSINESS_LOGIC_VERIFICATION.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION_AUDIT_REPORT.md  CONNECTIVITY_DIAGNOSIS.md  CONTRIBUTING.md  DATABASE_CONFIG_FIX_SUMMARY.md  DATABASE_CONFIG_INVESTIGATION.md  DATABASE_CONNECTION_RESOLUTION.md  DATABASE_FIX_APPLIED.md  DEAN_DEPENDENCY_SUMMARY.md  DEAN_DISCOVERY_REPORT.md  DEAN_OPERATIONAL_VERIFICATION.md  DEAN_SERVICE_DEPENDENCIES.md  DEBUG_REPORT.md  DELIVERY_REPORT.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE_IMPROVED.md  DEPLOYMENT_STATUS_REPORT.md  Dockerfile  EMERGENCY_PROCEDURES.md  ENVIRONMENT_VARIABLES.md  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_REPORT.md  LICENSE.md  MONITORING_ACTIVATION_REPORT.md  Makefile  OPERATIONS_CHECKLIST.md  OPERATIONS_HANDOVER.md  PROJECT_MANIFEST.md  README.md  RUNTIME_FIX_DOCUMENTATION.md  SECURITY.md  claude_md_investigation.md  dependabot_pr_summary.md  deploy_to_windows.sh  (+21 more)
.github/: CODEOWNERS  README.md  dependabot.yml  pull_request_template.md
.github/workflows/: README.md  cd.yml  ci.yml  configuration-validation.yml  deploy.yml  event.json  release.yml  security.yml  validation.yml
IndexAgent/: main.py
airflow/dags/: dean_evolution.py  dean_pattern_discovery.py  dean_token_economy.py
airflow/plugins/: dean_operators.py
configs/: README.md
configs/deployment/: local.yaml  production_single_machine.yaml
configs/hardware/: i7_rtx3080.yaml
configs/orchestration/: deployment_config.yaml  evolution_config.yaml  single_machine.yaml
configs/services/: monitoring_config.yaml  service_registry.yaml
docker/: Dockerfile.airflow  Dockerfile.evolution  Dockerfile.indexagent
docs/: CROSS_REFERENCE.md  DEMO_SCRIPT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PREREQUISITES.md  DOCUMENTATION_INVENTORY.md  ENVIRONMENT_VARIABLES.md  INDEX.md  LAUNCH_CHECKLIST.md  OPERATIONS_RUNBOOK.md  PKI_OPERATIONS.md  PRODUCTION_DEPLOYMENT.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REPOSITORY_STRUCTURE.md  SECRET_MANAGEMENT_GUIDE.md  SECURITY_ARCHITECTURE.md  STAKEHOLDER_DECISIONS_REQUIRED.md  TROUBLESHOOTING.md  evolution_trial_api.md  live_evolution_results.md  live_execution_summary.md  logging-configuration.md  migration_guide.md  real_evolution_results.md  service_registry_api.md  specification_validation_report.md  system_deployment_final_report.md  web_dashboard_guide.md
docs/api/: API.md  (+6 more)
evolution-api/: main.py
examples/: README.md
monitoring/: README.md  alertmanager.yml  alerts.yml  deploy_monitoring.ps1  docker-compose.monitoring.yml  loki-config.yml  prometheus.yml  promtail-config.yml
nginx/: nginx.dev.conf  nginx.prod.conf
postgres/: 00-create-schema.sql  01-init-database.sql  02-init-extensions.sql
releases/: dean-orchestration-v1.0.0-20250614_210852.tar.gz.sha256
requirements/: README.md  airflow.txt  base.txt  dev.txt  evolution.txt  indexagent.txt  test.txt
scripts/: README.md  build_images.sh  check_bom.py  convert_pfx_to_pem.ps1  credentials.json  demo_full_workflow.sh  deploy_credentials.ps1  deploy_dean_local.sh  deploy_infisical.ps1  deployment_commands.sh  deployment_dry_run.ps1  dev_environment.sh  docker-compose.security.yml  final_deployment_verification.sh  final_production_validation.ps1  final_validation.sh  fix_runtime_database_config.ps1  generate_credentials.py  generate_infisical_credentials.py  generate_ssl_certs.sh  infisical_credentials.json  init-postgres.sh  initialize_deployment_pipeline.ps1  live_evolution_real.sh  live_evolution_test.py  live_evolution_test.sh  manage_ssl_certificates.py  monitor_deployment.ps1  optimize_for_hardware.sh  package_release.sh  performance_test.py  pre_deployment_check.py  prepare_deployment.sh  production_hardening.sh  quick_auth_test.sh  rollback_deployment.ps1  run_tests.sh  security_audit.py  security_scan.sh  setup-dean-directories.ps1  (+20 more)
service_stubs/: README_AUTH.md  docker-compose.stubs.yml  requirements.txt
src/: README.md  __init__.py
tests/: README.md  __init__.py  conftest.py  mock_services.py  test_evolution_integration.py  test_service_registry.py  test_workflow_coordinator.py
validation/: business_logic_proof.py  complete_evolution_cycle.py  create_agent_and_allocate.py  e2e_integration_test.py  evolution_results.json  evolution_simulation.py  final_integration_report.json  final_integration_test.py  final_integration_test_v2.py  fixed_integration_test.py  integration_proof.py  integration_test_report.json  prove_functionality.py  run_evolution_demo.py  simple_integration_test.py  test_actual_endpoints.py  test_token_allocation.py  test_token_allocation_fixed.py
web/: README.md  index.html
(+138 files in other folders)
